fixed bootstrap grid auto align

--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,13 @@
 	padding-bottom: 15px;
 }
 
+#portrait {
+	margin: auto;
+	border-top-width: 10px;
+	border-radius: 50%
+	border-top-color: white;
+}
+
 #home {	
 	background-image: url('../images/main_background.jpg');
 	background-size: cover;
@@ -48,7 +55,6 @@
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	color: #cfcfcf;
-	height: 750px;
 }
 
 #home .overlay {
@@ -59,7 +65,6 @@
 	background: -ms-linear-gradient(top,  rgba(0,0,0,0.8) 0%,rgba(0,0,0,0.73) 17%,rgba(0,0,0,0.66) 35%,rgba(0,0,0,0.55) 62%,rgba(0,0,0,0.4) 100%); /* IE10+ */
 	background: linear-gradient(to bottom,  rgba(0,0,0,0.8) 0%,rgba(0,0,0,0.73) 17%,rgba(0,0,0,0.66) 35%,rgba(0,0,0,0.55) 62%,rgba(0,0,0,0.4) 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cc000000', endColorstr='#66000000',GradientType=0 ); /* IE6-9 */
-	height: 750px;
 	background-attachment: fixed;
 	padding: 20%;
 }
@@ -67,15 +72,14 @@
 #about {
 	background-color: #2D3139;
 	color: #ffffff;
-	height: 400px;
-	display: block;
+
+	
+	padding-top: 50px;
 }
 
 #experience {
 	background-color: #2D3139;
 	color: #ffffff;
-	height: 50em;
-	display: block;
 }
 
 #contact {
@@ -84,17 +88,13 @@
 	background-position: center;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
-	height: 413px;
-	display: block;
-	padding-top: 75px;
+	padding-top: 50px;
 }
 
 #footer {
 	background-color: #2D3139;
 	color: #ffffff;
-	height: 50px;
-	display: block;
-	padding-top: 15px;
+	padding-top: 10px;
 }
 
 .navbar {
